language/move-lang/tests/move_check/typing/module_call_wrong_argument_in_list.exp
error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:20:9
   │
16 │     public fun foo(a: address, u: u64, s: S) {
   │                       ------- Expected: 'address'
   ·
20 │         foo(false, 0, S{});
   │         ^^^^^^^^^^^^^^^^^^
   │         │   │
   │         │   Given: 'bool'
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 'a'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:21:9
   │
16 │     public fun foo(a: address, u: u64, s: S) {
   │                                   --- Expected: 'u64'
   ·
21 │         foo(@0x0, false, S{});
   │         ^^^^^^^^^^^^^^^^^^^^^
   │         │         │
   │         │         Given: 'bool'
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 'u'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:22:9
   │
16 │     public fun foo(a: address, u: u64, s: S) {
   │                                           - Expected: '0x2::M::S'
   ·
22 │         foo(@0x0, 0, false);
   │         ^^^^^^^^^^^^^^^^^^^
   │         │            │
   │         │            Given: 'bool'
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 's'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:23:9
   │
16 │     public fun foo(a: address, u: u64, s: S) {
   │                                   --- Expected: 'u64'
   ·
23 │         foo(@0x0, false, false);
   │         ^^^^^^^^^^^^^^^^^^^^^^^
   │         │         │
   │         │         Given: 'bool'
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 'u'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:23:9
   │
16 │     public fun foo(a: address, u: u64, s: S) {
   │                                           - Expected: '0x2::M::S'
   ·
23 │         foo(@0x0, false, false);
   │         ^^^^^^^^^^^^^^^^^^^^^^^
   │         │                │
   │         │                Given: 'bool'
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 's'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:24:9
   │
16 │     public fun foo(a: address, u: u64, s: S) {
   │                       ------- Expected: 'address'
   ·
24 │         foo(false, 0, false);
   │         ^^^^^^^^^^^^^^^^^^^^
   │         │   │
   │         │   Given: 'bool'
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 'a'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:24:9
   │
16 │     public fun foo(a: address, u: u64, s: S) {
   │                                           - Expected: '0x2::M::S'
   ·
24 │         foo(false, 0, false);
   │         ^^^^^^^^^^^^^^^^^^^^
   │         │             │
   │         │             Given: 'bool'
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 's'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:25:9
   │
16 │     public fun foo(a: address, u: u64, s: S) {
   │                       ------- Expected: 'address'
   ·
25 │         foo(false, false, S{});
   │         ^^^^^^^^^^^^^^^^^^^^^^
   │         │   │
   │         │   Given: 'bool'
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 'a'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:25:9
   │
16 │     public fun foo(a: address, u: u64, s: S) {
   │                                   --- Expected: 'u64'
   ·
25 │         foo(false, false, S{});
   │         ^^^^^^^^^^^^^^^^^^^^^^
   │         │          │
   │         │          Given: 'bool'
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 'u'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:29:9
   │
 8 │     public fun foo(a: address, u: u64, s: S) {
   │                       ------- Expected: 'address'
   ·
29 │         X::foo(false, 0, X::s());
   │         ^^^^^^^^^^^^^^^^^^^^^^^^
   │         │      │
   │         │      Given: 'bool'
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 'a'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:30:9
   │
 8 │     public fun foo(a: address, u: u64, s: S) {
   │                                   --- Expected: 'u64'
   ·
30 │         X::foo(@0x0, false, X::s());
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │            │
   │         │            Given: 'bool'
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 'u'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:31:9
   │
 8 │     public fun foo(a: address, u: u64, s: S) {
   │                                           - Expected: '0x2::X::S'
   ·
31 │         X::foo(@0x0, 0, S{});
   │         ^^^^^^^^^^^^^^^^^^^^
   │         │               │
   │         │               Given: '0x2::M::S'
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 's'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:32:9
   │
 8 │     public fun foo(a: address, u: u64, s: S) {
   │                                   --- Expected: 'u64'
   ·
32 │         X::foo(@0x0, false, S{});
   │         ^^^^^^^^^^^^^^^^^^^^^^^^
   │         │            │
   │         │            Given: 'bool'
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 'u'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:32:9
   │
 8 │     public fun foo(a: address, u: u64, s: S) {
   │                                           - Expected: '0x2::X::S'
   ·
32 │         X::foo(@0x0, false, S{});
   │         ^^^^^^^^^^^^^^^^^^^^^^^^
   │         │                   │
   │         │                   Given: '0x2::M::S'
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 's'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:33:9
   │
 8 │     public fun foo(a: address, u: u64, s: S) {
   │                       ------- Expected: 'address'
   ·
33 │         X::foo(false, 0, S{});
   │         ^^^^^^^^^^^^^^^^^^^^^
   │         │      │
   │         │      Given: 'bool'
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 'a'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:33:9
   │
 8 │     public fun foo(a: address, u: u64, s: S) {
   │                                           - Expected: '0x2::X::S'
   ·
33 │         X::foo(false, 0, S{});
   │         ^^^^^^^^^^^^^^^^^^^^^
   │         │                │
   │         │                Given: '0x2::M::S'
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 's'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:34:9
   │
 8 │     public fun foo(a: address, u: u64, s: S) {
   │                       ------- Expected: 'address'
   ·
34 │         X::foo(false, false, X::s());
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │      │
   │         │      Given: 'bool'
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 'a'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/module_call_wrong_argument_in_list.move:34:9
   │
 8 │     public fun foo(a: address, u: u64, s: S) {
   │                                   --- Expected: 'u64'
   ·
34 │         X::foo(false, false, X::s());
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │             │
   │         │             Given: 'bool'
   │         Invalid call of '0x2::X::foo'. Invalid argument for parameter 'u'

